--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "citybank",
   "version": "1.0.0",
-  "description": "Test project for the Citybank",
+  "description": "Test project for the Citibank",
   "private": true,
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Alisa-Filatova/citybank.git"
+    "url": "git+https://github.com/Alisa-Filatova/citytest.git"
   },
   "author": "Alisa Filatova",
   "license": "ISC",
@@ -23,6 +23,6 @@
     "less": "2.7.2",
     "less-loader": "4.0.5",
     "style-loader": "0.18.2",
-    "webpack": "3.5.6"
+    "webpack": "^3.5.6"
   }
 }
