--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint",
     "webpack": "webpack",
     "watch": "webpack -w",
     "build": "rm -rf ./dist && NODE_ENV=production webpack"
